# Agentic-Data-Cleaning

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/: DataDiffViewer.tsx  ui.tsx
frontend/src/hooks/: use-app-data.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts  mock-data.ts
frontend/src/store/: app-store.ts
scripts/: evaluate.py  run_cleaning.py  test_api.py
src/: config.py  main.py
src/agents/: anomaly_detector.py  cleaner.py  confidence_scorer.py  data_profiler.py  reconstruction_schema_planner.py  reconstruction_spec.py  schema_analyzer.py  structure_reconstruction.py  validator.py
src/api/: server.py
src/audit/: logger.py  models.py
src/evaluation/: benchmarks.py  metrics.py
src/graph/: checkpointer.py  state.py  workflow.py
src/ingestion/: chunker.py  loader.py
src/knowledge/: domain_adapters.py  pattern_store.py  rules_engine.py
src/tools/: db_tools.py  pandas_tools.py  regex_tools.py  stats_tools.py
tests/fixtures/: sample_dirty.csv  sample_ground_truth.json
tests/test_agents/: test_anomaly_detector.py  test_confidence_scorer.py  test_data_profiler.py  test_metrics.py  test_pattern_store.py  test_rules_engine.py  test_schema_analyzer.py  test_structure_reconstruction.py  test_validator.py
tests/test_api/: test_server.py
tests/test_graph/: test_workflow.py
tests/test_tools/: test_pandas_tools.py  test_regex_tools.py  test_stats_tools.py
(+15 files in other folders)
