[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-data-cleaning"
version = "0.1.0"
description = "Production-grade agentic platform for automated structured data cleaning"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.2.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-Levenshtein>=0.26.0",
    "thefuzz>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
agentic-clean = "src.main:cli_main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
